# community-group

./: .env.example  .gitignore  CNAME  LICENSE  README.md  index.html  manifest.json  offline.html  service-worker.js
backend/: README.md  crud.py  db.py  helpers.py  main.py  migrations.py  models.py  ovs.sqlite3  pyproject.toml
css/: main.css  modern.css  s3.css
js/: config.json  main.js  vue-qrcode-reader.umd.js
